--- a/rocoto/hafs_multistorm_workflow.xml.in
+++ b/rocoto/hafs_multistorm_workflow.xml.in
@@ -76,7 +76,7 @@
   <!ENTITY RUN_HRDGRAPHICS "@[RUN_HRDGRAPHICS:-NO]">
   <!ENTITY RUN_EMCGRAPHICS "@[RUN_EMCGRAPHICS:-NO]">
   <!ENTITY ARCHIVE_FV3OUT "@[ARCHIVE_FV3OUT]">
-  <!-- KKUROSAWA -->
+  <!-- KKUROSAWA2 -->
   <!ENTITY RUN_RECENTER "@[RUN_RECENTER]">
   <!ENTITY RUN_LONG_FORECAST_ENS "@[RUN_LONG_FORECAST_ENS]">
   <!ENTITY RUN_MIX_ENS_DA "@[RUN_MIX_ENS_DA]">
